--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@inquirer/prompts": "^6.0.1"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2"
   }
 }
